src/test/ui/async-await/no-const-async.stderr
error: functions cannot be both `const` and `async`
  --> $DIR/no-const-async.rs:4:5
   |
LL | pub const async fn x() {}
   | ----^^^^^-^^^^^----------
   |     |     |
   |     |     `async` because of this
   |     `const` because of this

error[E0723]: `impl Trait` in const fn is unstable
  --> $DIR/no-const-async.rs:4:24
   |
LL | pub const async fn x() {}
   |                        ^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0723`.
